<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape">

    <EditText
        android:id="@+id/type_add_number"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_shape"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number_add_number"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_shape"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_add_number" />

    <Button
        android:id="@+id/btn_save_add_number"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/text_shape"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_add_number" />

</androidx.constraintlayout.widget.ConstraintLayout>