<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:outlineAmbientShadowColor="#9E1212"
    tools:context=".fragment.ShowUser">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerShowUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#191515"
        android:backgroundTint="@color/purple_700"
        android:clickable="true"
        android:contentDescription="@string/add_user"
        android:foregroundTint="#C7C7C7"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="@color/white"
        android:src="@drawable/ic_baseline_add"
        android:tint="@color/white"
        app:borderWidth="3dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:rippleColor="#15E468"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_adapter"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/addUser"
        app:layout_constraintEnd_toStartOf="@+id/addUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addUser"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/favorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_adapter"
        android:text="@string/favorite"
        android:textColor="#311B92"
        app:layout_constraintBottom_toBottomOf="@+id/addUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addUser"
        app:layout_constraintTop_toTopOf="@+id/addUser"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>